fix secondary sidebar horizontal scroll

--- a/app/assets/stylesheets/tylium/modules/_secondary_sidebar.scss
+++ b/app/assets/stylesheets/tylium/modules/_secondary_sidebar.scss
@@ -3,7 +3,8 @@
   border-right: 1px solid $borderColor;
   color: $lightColor;
   height: calc(100vh - 60px);
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 1rem;
   position: sticky;
   top: 0;
